<resources>
    <string name="app_name">TaSOS</string>
    <string name="error_user_create">Create user failed</string>
    <string name="error_user_not_found">User not found</string>
    <string name="lbl_description_image">Image</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_message">Place Message</string>
    <string name="lbl_sing_up">Sign Up</string>
    <string name="lbl_sing_in">Already have an account?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_database_error">Database Error</string>
    <string name="failure_input">Input Error</string>
    <string name="lbl_search">Search Contact</string>
    <string name="lbl_video">Video Chat</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_video_foreground">Video Chat, press button camera and answer.</string>
    <string name="lbl_audio_foreground">Audio Chat, press button audio and answer.</string>
    <string name="msg_search_process">Search in process</string>
    <string name="lbl_configuration">Configuration</string>
    <string name="action_message">Message send OK</string>
    <string name="failure_authenticate">Authenticate Fail.</string>
    <string name="action_invitation">He wants to be your friend. Write answer or not.</string>
    <string name="update_profile_ok">Update Profile OK</string>
    <string name="update_profile_fail">Update Profile fail</string>
    <string name="foreground_message">¡Welcome to the app!</string>
    <string name="background_message">¡Goodbye!</string>
    <string name="send_message">Send</string>
    <string name="destroy_message">¡I am dead!</string>
    <string name="create_message">¡I am created!</string>
    <string name="select_image">Select image</string>
    <string name="new_message_notify">New Message</string>
    <string name="channel_description">News Messages TaSOS</string>
    <string name="channel_name">Notification TaSOS</string>
    <string name="select_photo">Select a photo</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">com.globalhiddenodds.tasos.news</string>
    <string name="lbl_delete_all_message">Delete All Messages</string>
    <string name="lbl_tools">Tools</string>
</resources>
