<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bk_message_login">
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_text_guideline"
            app:layout_constraintGuide_percent=".80"
            android:orientation="vertical"/>
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_sing_in_guideline"
            app:layout_constraintGuide_percent=".60"
            android:orientation="vertical"/>
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="horizontal"/>


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            android:contentDescription="@string/lbl_description_image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_left"
            android:paddingEnd="@dimen/padding_right"
            android:hint="@string/hint_email"
            android:background="@drawable/rounded_border"
            android:layout_marginTop="100dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_text_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/et_email"
            android:contentDescription="@string/lbl_description_image" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:hint="@string/hint_password"
            android:background="@drawable/rounded_border"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_text_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_email"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_key"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            android:contentDescription="@string/lbl_description_image" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_send_sign_up"
            android:clickable="true"
            android:text="@string/lbl_sing_up"
            android:background="@drawable/rounded_border_white"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_sing_in_guideline"
            app:layout_constraintTop_toBottomOf="@+id/bt_send_sign_up"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/lbl_sing_in"
            android:textColor="@color/colorAccent"
            android:textAlignment="textStart"
            android:id="@+id/tv_sing_in"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:id="@+id/bt_send_sign_in"
            android:text="@string/btn_sign_in"
            android:background="@null"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="@+id/right_sing_in_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_sing_in"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>